Add CONFIG_BT_CTLR_TX_PWR_PLUS_8 to config

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -5,3 +5,4 @@
 # Comment the following line to disable the Lily58 OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
